--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/* 버전 관리 안할 파일들 */
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
